# Olympus_UI

./: .aerospace-config.json  .eslintrc.cjs  .gitignore  .mise.toml  .prettierignore  .prettierrc  AGENT_LAUNCH_SUMMARY.txt  BROWSER_COMPATIBILITY_FIXES.md  CLAUDE.md  CODEBASE_COHESION_AUDIT.md  CODE_CONSISTENCY_ENFORCEMENT.md  CONTRIBUTING.md  DRONE_CONFIG_100_PERCENT_COMPLETE.md  DRONE_CONFIG_MISSION_COMPLETE.md  DRONE_CONFIG_PLUGIN_ARCHITECTURE.md  DRONE_CONFIG_PLUGIN_PRD.md  DRONE_CONFIG_REFINED_ARCHITECTURE.md  MAVLINK_INTEGRATION.md  MISSION_CONTROL_README.md  NASA_JPL_COMPLIANCE_FIXES.md  NASA_JPL_RULE4_REFACTORING_SUMMARY.md  PID_TUNING_UI_PRD.md  PRD_DroneConfig_MotorControl.md  RUNTIME_ERROR_FIXES.md  SAFETY_CRITICAL_FIXES_REPORT.md  THEME_FIX_SUMMARY.md  TYPESCRIPT_MASS_FIX_PLAN.md  TYPESCRIPT_MASS_FIX_RESULTS.md  TechSpecs_DroneConfig_MotorControl.md  UI_IMPROVEMENTS_SUMMARY.md  agent-dashboard.html  debug-check.js  fix-and-launch-agents.ps1  integrate-map-features.ps1  launch-agents-current-wezterm.ps1  launch-agents-tabs.ps1  launch-agents-wezterm-final.ps1  launch-agents-wezterm-fixed.ps1  launch-agents-windows-terminal.ps1  launch-grid.ps1  (+22 more)
.claude/: CLAUDE.md  TM_COMMANDS_GUIDE.md
.husky/: README.md  commit-msg  pre-commit  pre-push
aerospace-agent-system/: README.md  package-system.ps1  spawn-agents.ps1
docs/: aerospace-tui-research-report.md  crates.md  dependency-graph.txt  design.md  mavlink-tui-integration-research-report.md  requirements.md  tasks.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  map_features.rs  mavlink.rs
(+366 files in other folders)
